--- a/AC3.2-GameOfThrones/Info.plist
+++ b/AC3.2-GameOfThrones/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>NSAppTransportSecurity</key>
 	<dict>
+		<key>NSAllowsArbitraryLoadsInWebContent</key>
+		<false/>
 		<key>NSAllowsArbitraryLoads</key>
 		<false/>
 	</dict>
